# big-data

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  REQ.md  config.py  data_sample.csv  docker-compose.yml  poc.py  pyproject.toml
app/: config.py  main.py  poc_no_pandas.py  poc_pandas.py  poc_pandas_cf.py  poc_pandas_cf_s3.py  poc_pandas_dask.py  poc_pandas_mp.py  requirements.txt  requirements_old.txt
app/adapters/: all_countries.py  allcountries.py  country_codes.py  dynamo_db.py  load_country_info.py  load_csv.py  s3_load_file.py  s3_save_df.py  save_df.py  save_df_to_s3.py
app/bl/: airport_matching.py  df_manipulations.py  df_processing.py  models.py
app/core/: ports.py  timer.py
docker/: Dockerfile  docker-compose.yml
