[tool.poetry]
name = "big-data"
version = "0.1.0"
description = ""
authors = ["Andrzej Szulc <aszulc@pgs-soft.com>"]

[tool.poetry.dependencies]
python = "^3.9"
geopy = "^2.1.0"
pandas = "^1.2.0"
boto3 = "^1.16.50"

[tool.poetry.dev-dependencies]
localstack = "^0.12.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
